--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'http://lizhengliang1226.github.io'
 
 author: 李正良                  # change to your full name
 
@@ -30,7 +30,7 @@ twitter:
   username: twitter_username            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
+  name: lizhengliang                  # it will shows as the copyright owner in Footer
   email: 1731415266@qq.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
